Latest updates for SPINE programming the APIs

--- a/kustomize/overlays/moc/02-deploy-workbenches.ipynb
+++ b/kustomize/overlays/moc/02-deploy-workbenches.ipynb
@@ -47,13 +47,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PLAY [Deploy workbenches] ******************************************************\n",
+      "\n",
+      "TASK [overlay-vars : Load vars] ************************************************\n",
+      "ok: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Download computate configset: curl -k https://raw.githubusercontent.com/computate-org/computate/refs/heads/main/config/solr/computate-configset.zip -o /tmp/computate-configset.zip] ***\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Upload default computate configset:  curl -k -X POST \n",
+      "  -H \"Content-Type:application/octet-stream\" \n",
+      "  --data-binary @/tmp/computate-configset.zip \n",
+      "  \"https://solr.apps-crc.testing/solr/admin/configs?action=UPLOAD&name=computate&overwrite=true\"] ***\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Debug upload_computate_configset] *******************\n",
+      "ok: [localhost] => {\n",
+      "    \"upload_computate_configset\": {\n",
+      "        \"changed\": true,\n",
+      "        \"failed\": false,\n",
+      "        \"rc\": 0,\n",
+      "        \"return_code\": 0,\n",
+      "        \"stderr\": \"  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\\n                                 Dload  Upload   Total   Spent    Left  Speed\\n\\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\\r100 70748    0     0  100 70748      0  58865  0:00:01  0:00:01 --:--:-- 58907\\r100 70748    0     0  100 70748      0  32113  0:00:02  0:00:02 --:--:-- 32128\\r100 70748    0     0  100 70748      0  22078  0:00:03  0:00:03 --:--:-- 22081\\r100 70748    0     0  100 70748      0  16822  0:00:04  0:00:04 --:--:-- 16824\\r100 70748    0     0  100 70748      0  13587  0:00:05  0:00:05 --:--:-- 13589\\r100 70748    0     0  100 70748      0  11396  0:00:06  0:00:06 --:--:--     0\\r100 70748    0     0  100 70748      0   9813  0:00:07  0:00:07 --:--:--     0\\r100 70748    0     0  100 70748      0   8617  0:00:08  0:00:08 --:--:--     0\\r100 70809  100    61  100 70748      7   8366  0:00:08  0:00:08 --:--:--    14\\n\",\n",
+      "        \"stderr_lines\": [\n",
+      "            \"  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\",\n",
+      "            \"                                 Dload  Upload   Total   Spent    Left  Speed\",\n",
+      "            \"\",\n",
+      "            \"  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0  58865  0:00:01  0:00:01 --:--:-- 58907\",\n",
+      "            \"100 70748    0     0  100 70748      0  32113  0:00:02  0:00:02 --:--:-- 32128\",\n",
+      "            \"100 70748    0     0  100 70748      0  22078  0:00:03  0:00:03 --:--:-- 22081\",\n",
+      "            \"100 70748    0     0  100 70748      0  16822  0:00:04  0:00:04 --:--:-- 16824\",\n",
+      "            \"100 70748    0     0  100 70748      0  13587  0:00:05  0:00:05 --:--:-- 13589\",\n",
+      "            \"100 70748    0     0  100 70748      0  11396  0:00:06  0:00:06 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   9813  0:00:07  0:00:07 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   8617  0:00:08  0:00:08 --:--:--     0\",\n",
+      "            \"100 70809  100    61  100 70748      7   8366  0:00:08  0:00:08 --:--:--    14\"\n",
+      "        ],\n",
+      "        \"stdout\": \"{\\n  \\\"responseHeader\\\":{\\n    \\\"status\\\":0,\\n    \\\"QTime\\\":8452\\n  }\\n}\",\n",
+      "        \"stdout_lines\": [\n",
+      "            \"{\",\n",
+      "            \"  \\\"responseHeader\\\":{\",\n",
+      "            \"    \\\"status\\\":0,\",\n",
+      "            \"    \\\"QTime\\\":8452\",\n",
+      "            \"  }\",\n",
+      "            \"}\"\n",
+      "        ]\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "TASK [deploy-workbenches : Deploy workbenches] *********************************\n",
+      "included: /home/ctate/.local/src/ai-telemetry/kustomize/overlays/moc/roles/deploy-workbenches/tasks/deploy-workbench.yaml for localhost => (item={'USER_NAME': 'computate', 'WORKBENCH_ADMIN': True})\n",
+      "\n",
+      "TASK [deploy-workbenches : Create namespace role bindings for ai-telemetry-cbca60] ***\n",
+      "ok: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Create a Persistent Volume Claim for computate] *****\n",
+      "ok: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Create a default ConfigMap for Notebook for computate] ***\n",
+      "ok: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Create a ConfigMap for Notebook for computate] ******\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Create a Notebook for computate] ********************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Wait for workbench Ready condition] *****************\n",
+      "ok: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Update PostgresCluster with database aitelemetrycomputate] ***\n",
+      "fatal: [localhost]: FAILED! => {\"changed\": false, \"error\": 422, \"msg\": \"Failed to patch existing object: b'{\\\"kind\\\":\\\"Status\\\",\\\"apiVersion\\\":\\\"v1\\\",\\\"metadata\\\":{},\\\"status\\\":\\\"Failure\\\",\\\"message\\\":\\\"PostgresCluster.postgres-operator.crunchydata.com \\\\\\\\\\\"postgres\\\\\\\\\\\" is invalid: spec.users[11]: Duplicate value: map[string]interface {}{\\\\\\\\\\\"name\\\\\\\\\\\":\\\\\\\\\\\"aitelemetrycomputate\\\\\\\\\\\"}\\\",\\\"reason\\\":\\\"Invalid\\\",\\\"details\\\":{\\\"name\\\":\\\"postgres\\\",\\\"group\\\":\\\"postgres-operator.crunchydata.com\\\",\\\"kind\\\":\\\"PostgresCluster\\\",\\\"causes\\\":[{\\\"reason\\\":\\\"FieldValueDuplicate\\\",\\\"message\\\":\\\"Duplicate value: map[string]interface {}{\\\\\\\\\\\"name\\\\\\\\\\\":\\\\\\\\\\\"aitelemetrycomputate\\\\\\\\\\\"}\\\",\\\"field\\\":\\\"spec.users[11]\\\"}]},\\\"code\\\":422}\\\\n'\", \"reason\": \"Unprocessable Entity\", \"status\": 422}\n",
+      "...ignoring\n",
+      "\n",
+      "TASK [deploy-workbenches : Configure launch.json for workbench computate] ******\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Configure vscode extensions for workbench computate] ***\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Configure vscode settings.json for workbench computate] ***\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Configure user settings.json for workbench computate] ***\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Configure keybindings.json for workbench computate] ***\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Create a symbolic link to project vars in home directory] ***\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Clone computate-base project] ***********************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Clone computate-search project] *********************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Clone computate-vertx project] **********************\n",
+      " [ERROR]: User interrupted execution\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ansible-playbook playbooks/deploy-workbenches.yaml"
    ]
