Fixing unique references in db schema, and spine programming upates

--- a/kustomize/overlays/moc/02-deploy-workbenches.ipynb
+++ b/kustomize/overlays/moc/02-deploy-workbenches.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -80,28 +80,75 @@
       "        \"failed\": false,\n",
       "        \"rc\": 0,\n",
       "        \"return_code\": 0,\n",
-      "        \"stderr\": \"  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\\n                                 Dload  Upload   Total   Spent    Left  Speed\\n\\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\\r100 70748    0     0  100 70748      0  58865  0:00:01  0:00:01 --:--:-- 58907\\r100 70748    0     0  100 70748      0  32113  0:00:02  0:00:02 --:--:-- 32128\\r100 70748    0     0  100 70748      0  22078  0:00:03  0:00:03 --:--:-- 22081\\r100 70748    0     0  100 70748      0  16822  0:00:04  0:00:04 --:--:-- 16824\\r100 70748    0     0  100 70748      0  13587  0:00:05  0:00:05 --:--:-- 13589\\r100 70748    0     0  100 70748      0  11396  0:00:06  0:00:06 --:--:--     0\\r100 70748    0     0  100 70748      0   9813  0:00:07  0:00:07 --:--:--     0\\r100 70748    0     0  100 70748      0   8617  0:00:08  0:00:08 --:--:--     0\\r100 70809  100    61  100 70748      7   8366  0:00:08  0:00:08 --:--:--    14\\n\",\n",
+      "        \"stderr\": \"  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\\n                                 Dload  Upload   Total   Spent    Left  Speed\\n\\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\\r100 70748    0     0  100 70748      0  58904  0:00:01  0:00:01 --:--:-- 58956\\r100 70748    0     0  100 70748      0  32126  0:00:02  0:00:02 --:--:-- 32128\\r100 70748    0     0  100 70748      0  22087  0:00:03  0:00:03 --:--:-- 22094\\r100 70748    0     0  100 70748      0  16827  0:00:04  0:00:04 --:--:-- 16828\\r100 70748    0     0  100 70748      0  13591  0:00:05  0:00:05 --:--:-- 13592\\r100 70748    0     0  100 70748      0  11398  0:00:06  0:00:06 --:--:--     0\\r100 70748    0     0  100 70748      0   9815  0:00:07  0:00:07 --:--:--     0\\r100 70748    0     0  100 70748      0   8619  0:00:08  0:00:08 --:--:--     0\\r100 70748    0     0  100 70748      0   7682  0:00:09  0:00:09 --:--:--     0\\r100 70748    0     0  100 70748      0   6928  0:00:10  0:00:10 --:--:--     0\\r100 70748    0     0  100 70748      0   6310  0:00:11  0:00:11 --:--:--     0\\r100 70748    0     0  100 70748      0   5792  0:00:12  0:00:12 --:--:--     0\\r100 70748    0     0  100 70748      0   5354  0:00:13  0:00:13 --:--:--     0\\r100 70748    0     0  100 70748      0   4976  0:00:14  0:00:14 --:--:--     0\\r100 70748    0     0  100 70748      0   4649  0:00:15  0:00:15 --:--:--     0\\r100 70748    0     0  100 70748      0   4362  0:00:16  0:00:16 --:--:--     0\\r100 70748    0     0  100 70748      0   4108  0:00:17  0:00:17 --:--:--     0\\r100 70748    0     0  100 70748      0   3883  0:00:18  0:00:18 --:--:--     0\\r100 70748    0     0  100 70748      0   3680  0:00:19  0:00:19 --:--:--     0\\r100 70748    0     0  100 70748      0   3498  0:00:20  0:00:20 --:--:--     0\\r100 70748    0     0  100 70748      0   3333  0:00:21  0:00:21 --:--:--     0\\r100 70748    0     0  100 70748      0   3183  0:00:22  0:00:22 --:--:--     0\\r100 70748    0     0  100 70748      0   3046  0:00:23  0:00:23 --:--:--     0\\r100 70748    0     0  100 70748      0   2920  0:00:24  0:00:24 --:--:--     0\\r100 70748    0     0  100 70748      0   2804  0:00:25  0:00:25 --:--:--     0\\r100 70748    0     0  100 70748      0   2697  0:00:26  0:00:26 --:--:--     0\\r100 70748    0     0  100 70748      0   2598  0:00:27  0:00:27 --:--:--     0\\r100 70748    0     0  100 70748      0   2506  0:00:28  0:00:28 --:--:--     0\\r100 70748    0     0  100 70748      0   2420  0:00:29  0:00:29 --:--:--     0\\r100 70748    0     0  100 70748      0   2340  0:00:30  0:00:30 --:--:--     0\\r100 70748    0     0  100 70748      0   2265  0:00:31  0:00:31 --:--:--     0\\r100 70748    0     0  100 70748      0   2194  0:00:32  0:00:32 --:--:--     0\\r100 70748    0     0  100 70748      0   2128  0:00:33  0:00:33 --:--:--     0\\r100 70748    0     0  100 70748      0   2066  0:00:34  0:00:34 --:--:--     0\\r100 70748    0     0  100 70748      0   2007  0:00:35  0:00:35 --:--:--     0\\r100 70748    0     0  100 70748      0   1952  0:00:36  0:00:36 --:--:--     0\\r100 70748    0     0  100 70748      0   1899  0:00:37  0:00:37 --:--:--     0\\r100 70748    0     0  100 70748      0   1850  0:00:38  0:00:38 --:--:--     0\\r100 70748    0     0  100 70748      0   1802  0:00:39  0:00:39 --:--:--     0\\r100 70748    0     0  100 70748      0   1758  0:00:40  0:00:40 --:--:--     0\\r100 70748    0     0  100 70748      0   1715  0:00:41  0:00:41 --:--:--     0\\r100 70748    0     0  100 70748      0   1674  0:00:42  0:00:42 --:--:--     0\\r100 70748    0     0  100 70748      0   1635  0:00:43  0:00:43 --:--:--     0\\r100 70748    0     0  100 70748      0   1598  0:00:44  0:00:44 --:--:--     0\\r100 70748    0     0  100 70748      0   1563  0:00:45  0:00:45 --:--:--     0\\r100 70748    0     0  100 70748      0   1529  0:00:46  0:00:46 --:--:--     0\\r100 70748    0     0  100 70748      0   1497  0:00:47  0:00:47 --:--:--     0\\r100 70748    0     0  100 70748      0   1466  0:00:48  0:00:48 --:--:--     0\\r100 70748    0     0  100 70748      0   1436  0:00:49  0:00:49 --:--:--     0\\r100 70748    0     0  100 70748      0   1407  0:00:50  0:00:50 --:--:--     0\\r100 70748    0     0  100 70748      0   1380  0:00:51  0:00:51 --:--:--     0\\r100 70748    0     0  100 70748      0   1353  0:00:52  0:00:52 --:--:--     0\\r100 70748    0     0  100 70748      0   1328  0:00:53  0:00:53 --:--:--     0\\r100 70748    0     0  100 70748      0   1303  0:00:54  0:00:54 --:--:--     0\\r100 70748    0     0  100 70748      0   1280  0:00:55  0:00:55 --:--:--     0\\r100 70810  100    62  100 70748      1   1264  0:01:02  0:00:55  0:00:07    13\\n\",\n",
       "        \"stderr_lines\": [\n",
       "            \"  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\",\n",
       "            \"                                 Dload  Upload   Total   Spent    Left  Speed\",\n",
       "            \"\",\n",
       "            \"  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\",\n",
-      "            \"100 70748    0     0  100 70748      0  58865  0:00:01  0:00:01 --:--:-- 58907\",\n",
-      "            \"100 70748    0     0  100 70748      0  32113  0:00:02  0:00:02 --:--:-- 32128\",\n",
-      "            \"100 70748    0     0  100 70748      0  22078  0:00:03  0:00:03 --:--:-- 22081\",\n",
-      "            \"100 70748    0     0  100 70748      0  16822  0:00:04  0:00:04 --:--:-- 16824\",\n",
-      "            \"100 70748    0     0  100 70748      0  13587  0:00:05  0:00:05 --:--:-- 13589\",\n",
-      "            \"100 70748    0     0  100 70748      0  11396  0:00:06  0:00:06 --:--:--     0\",\n",
-      "            \"100 70748    0     0  100 70748      0   9813  0:00:07  0:00:07 --:--:--     0\",\n",
-      "            \"100 70748    0     0  100 70748      0   8617  0:00:08  0:00:08 --:--:--     0\",\n",
-      "            \"100 70809  100    61  100 70748      7   8366  0:00:08  0:00:08 --:--:--    14\"\n",
+      "            \"100 70748    0     0  100 70748      0  58904  0:00:01  0:00:01 --:--:-- 58956\",\n",
+      "            \"100 70748    0     0  100 70748      0  32126  0:00:02  0:00:02 --:--:-- 32128\",\n",
+      "            \"100 70748    0     0  100 70748      0  22087  0:00:03  0:00:03 --:--:-- 22094\",\n",
+      "            \"100 70748    0     0  100 70748      0  16827  0:00:04  0:00:04 --:--:-- 16828\",\n",
+      "            \"100 70748    0     0  100 70748      0  13591  0:00:05  0:00:05 --:--:-- 13592\",\n",
+      "            \"100 70748    0     0  100 70748      0  11398  0:00:06  0:00:06 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   9815  0:00:07  0:00:07 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   8619  0:00:08  0:00:08 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   7682  0:00:09  0:00:09 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   6928  0:00:10  0:00:10 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   6310  0:00:11  0:00:11 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   5792  0:00:12  0:00:12 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   5354  0:00:13  0:00:13 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   4976  0:00:14  0:00:14 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   4649  0:00:15  0:00:15 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   4362  0:00:16  0:00:16 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   4108  0:00:17  0:00:17 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   3883  0:00:18  0:00:18 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   3680  0:00:19  0:00:19 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   3498  0:00:20  0:00:20 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   3333  0:00:21  0:00:21 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   3183  0:00:22  0:00:22 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   3046  0:00:23  0:00:23 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2920  0:00:24  0:00:24 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2804  0:00:25  0:00:25 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2697  0:00:26  0:00:26 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2598  0:00:27  0:00:27 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2506  0:00:28  0:00:28 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2420  0:00:29  0:00:29 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2340  0:00:30  0:00:30 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2265  0:00:31  0:00:31 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2194  0:00:32  0:00:32 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2128  0:00:33  0:00:33 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2066  0:00:34  0:00:34 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   2007  0:00:35  0:00:35 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1952  0:00:36  0:00:36 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1899  0:00:37  0:00:37 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1850  0:00:38  0:00:38 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1802  0:00:39  0:00:39 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1758  0:00:40  0:00:40 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1715  0:00:41  0:00:41 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1674  0:00:42  0:00:42 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1635  0:00:43  0:00:43 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1598  0:00:44  0:00:44 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1563  0:00:45  0:00:45 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1529  0:00:46  0:00:46 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1497  0:00:47  0:00:47 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1466  0:00:48  0:00:48 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1436  0:00:49  0:00:49 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1407  0:00:50  0:00:50 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1380  0:00:51  0:00:51 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1353  0:00:52  0:00:52 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1328  0:00:53  0:00:53 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1303  0:00:54  0:00:54 --:--:--     0\",\n",
+      "            \"100 70748    0     0  100 70748      0   1280  0:00:55  0:00:55 --:--:--     0\",\n",
+      "            \"100 70810  100    62  100 70748      1   1264  0:01:02  0:00:55  0:00:07    13\"\n",
       "        ],\n",
-      "        \"stdout\": \"{\\n  \\\"responseHeader\\\":{\\n    \\\"status\\\":0,\\n    \\\"QTime\\\":8452\\n  }\\n}\",\n",
+      "        \"stdout\": \"{\\n  \\\"responseHeader\\\":{\\n    \\\"status\\\":0,\\n    \\\"QTime\\\":55931\\n  }\\n}\",\n",
       "        \"stdout_lines\": [\n",
       "            \"{\",\n",
       "            \"  \\\"responseHeader\\\":{\",\n",
       "            \"    \\\"status\\\":0,\",\n",
-      "            \"    \\\"QTime\\\":8452\",\n",
+      "            \"    \\\"QTime\\\":55931\",\n",
       "            \"  }\",\n",
       "            \"}\"\n",
       "        ]\n",
@@ -121,7 +168,7 @@
       "ok: [localhost]\n",
       "\n",
       "TASK [deploy-workbenches : Create a ConfigMap for Notebook for computate] ******\n",
-      "changed: [localhost]\n",
+      "ok: [localhost]\n",
       "\n",
       "TASK [deploy-workbenches : Create a Notebook for computate] ********************\n",
       "changed: [localhost]\n",
@@ -158,6 +205,32 @@
       "changed: [localhost]\n",
       "\n",
       "TASK [deploy-workbenches : Clone computate-vertx project] **********************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Clone computate project] ****************************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Clone ai-telemetry project] *************************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Install python virtualenv] **************************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Configure .bashrc for workbench computate] **********\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Install python dependencies] ************************\n",
+      "changed: [localhost]\n",
+      "\n",
+      "TASK [deploy-workbenches : Create solr computate collection: computate-computate] ***\n",
+      "fatal: [localhost]: FAILED! => {\"changed\": true, \"rc\": 1, \"return_code\": 1, \"stderr\": \"WARN  - 2025-11-12 18:54:50.502; org.apache.solr.common.cloud.SolrZkClient; Using default ZkCredentialsInjector. ZkCredentialsInjector is not secure, it creates an empty list of credentials which leads to 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\\nWARN  - 2025-11-12 18:54:50.857; org.apache.solr.common.cloud.SolrZkClient; Using default ZkACLProvider. DefaultZkACLProvider is not secure, it creates 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\\n\\nERROR: \\nCollection 'computate-computate' already exists!\\nChecked collection existence using CollectionAdminRequest\\n\\n\", \"stderr_lines\": [\"WARN  - 2025-11-12 18:54:50.502; org.apache.solr.common.cloud.SolrZkClient; Using default ZkCredentialsInjector. ZkCredentialsInjector is not secure, it creates an empty list of credentials which leads to 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\", \"WARN  - 2025-11-12 18:54:50.857; org.apache.solr.common.cloud.SolrZkClient; Using default ZkACLProvider. DefaultZkACLProvider is not secure, it creates 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\", \"\", \"ERROR: \", \"Collection 'computate-computate' already exists!\", \"Checked collection existence using CollectionAdminRequest\", \"\"], \"stdout\": \"Re-using existing configuration directory computate\\n\", \"stdout_lines\": [\"Re-using existing configuration directory computate\"]}\n",
+      "...ignoring\n",
+      "\n",
+      "TASK [deploy-workbenches : Create solr site collection: aitelemetry-computate] ***\n",
+      "fatal: [localhost]: FAILED! => {\"changed\": true, \"rc\": 1, \"return_code\": 1, \"stderr\": \"WARN  - 2025-11-12 18:54:55.807; org.apache.solr.common.cloud.SolrZkClient; Using default ZkCredentialsInjector. ZkCredentialsInjector is not secure, it creates an empty list of credentials which leads to 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\\nWARN  - 2025-11-12 18:54:56.193; org.apache.solr.common.cloud.SolrZkClient; Using default ZkACLProvider. DefaultZkACLProvider is not secure, it creates 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\\n\\nERROR: \\nCollection 'aitelemetry-computate' already exists!\\nChecked collection existence using CollectionAdminRequest\\n\\n\", \"stderr_lines\": [\"WARN  - 2025-11-12 18:54:55.807; org.apache.solr.common.cloud.SolrZkClient; Using default ZkCredentialsInjector. ZkCredentialsInjector is not secure, it creates an empty list of credentials which leads to 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\", \"WARN  - 2025-11-12 18:54:56.193; org.apache.solr.common.cloud.SolrZkClient; Using default ZkACLProvider. DefaultZkACLProvider is not secure, it creates 'OPEN_ACL_UNSAFE' ACLs to Zookeeper nodes\", \"\", \"ERROR: \", \"Collection 'aitelemetry-computate' already exists!\", \"Checked collection existence using CollectionAdminRequest\", \"\"], \"stdout\": \"Re-using existing configuration directory computate\\n\", \"stdout_lines\": [\"Re-using existing configuration directory computate\"]}\n",
+      "...ignoring\n",
+      "\n",
+      "TASK [deploy-workbenches : Index the computate-search classes] *****************\n",
       " [ERROR]: User interrupted execution\n",
       "\n"
      ]
