Adding pod restarting insights to cluster project list

--- a/doc/getting-started/openshift-ai/35-create-AiProject.ipynb
+++ b/doc/getting-started/openshift-ai/35-create-AiProject.ipynb
@@ -33,7 +33,7 @@
     "CLASS_A_NAME=\"an AI project\"\n",
     "CLASS_DESCRIPTION=\"A research project using AI and GPUs\"\n",
     "CLASS_ORDER=8\n",
-    "CLASS_ICON='<i class=\"fa-regular fa-school\"></i>'\n",
+    "CLASS_ICON='<i class=\"fa-regular fa-people-line\"></i>'\n",
     "echo DONE"
    ]
   },
